2005-05-26  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (ParseLine): Simplify.

	* logview.c (CreateMainWin): Remove the signal for row activation.
	* log_repaint.c: (handle_row_collapse_cb),
	(handle_row_expansion_cb), (DrawLogLines): Free the expanded paths
	when switching logs.
	(handle_row_activation_cb): Remove the activation callback, we're
	not doing anything with it anyway.
	(logview_draw_log_lines): Renamed a few functions for consistency,
	a little refactoring. Show the number of log lines in the status bar.

2005-05-26  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (DrawLogLines): Fill the model before setting it
	in the treeview.
	(handle_row_expansion_cb, handle_row_collapse_cb, DrawLogLines):
	Remember which rows are expanded when switching logs.

	* logview.c (logview_calendar_set_state, logview_menus_set_state):
	Hide the calendar when there is no date info in the log.
	* logview.h: Remove calendar_dialog.
	* logrtns.c (ReadLogStats): Speed loading up when there's no date
	in the log.
	(isLogFile): Simplify log detection to allow freeform logs.

2005-05-25  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (tree_view_column_set_visible), (DrawLogLines):
	* logrtns.c: (OpenLogFile), (ParseLine):
	* logrtns.h:
	* logview.c: (CreateMainWin):
	* logview.h:
	* monitor.c: (mon_update_display):
	Allow the opening of logs with no Date-Time-Machine-Message
	structure (basically, any text file). If there is no date in the
	first line of the log, don't bother checking all the other
	lines. When drawing a log without dates, prepend lines instead of
	appending in the treeview (A lot faster).  Allow a filename of any
	size.

2005-05-24  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (log_repaint):
	* logview.c: (logview_save_prefs), (logview_select_log),
	(loglist_selection_changed), (loglist_find_logname):
	* userprefs.c: (prefs_save): Prevent a crash.

2005-05-24  Vincent Noel  <vnoel@cox.net>

	* logview-findbar.c: (logview_findbar_clicked_cb),