@@ -1,5 +1,7 @@
 2005-05-26  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_menus_set_state): Prevent crash.
+
 	* logrtns.c (ParseLine): Simplify.
 
 	* logview.c (CreateMainWin): Remove the signal for row activation.
